test/tests/snapshots/parser_output__call_1.snap
---
source: test/tests/parser_output.rs
assertion_line: 30
expression: "parse_expr(\"({print_num})(1);\").map(|b| b.ast.item)"

---
Ok(Expr(
  kind: Call(Span(
    start: 0,
    end: 13,
    item: Expr(
      kind: Block([
        Span(
          start: 2,
          end: 11,
          item: Expr(
            kind: Identifier(FuncId(0)),
            ty: Function(
              params: [
                Int64,
              ],
              returns: Void,
            ),
          ),
        ),
      ]),
      ty: Function(
        params: [
          Int64,
        ],
        returns: Void,
      ),
    ),
  ), [
    Span(
      start: 14,
      end: 15,
      item: Expr(
        kind: Number("1"),
        ty: Int64,
      ),
    ),
  ]),
  ty: Void,
))
