test/tests/snapshots/parser_output__math_type_mismatch.snap
---
source: test/tests/parser_output.rs
assertion_line: 29
expression: "parse_expr(\"1 + true\").map(|b| b.ast.item)"

---
Ok(Expr(
  kind: ArithOp(Span(
    start: 0,
    end: 1,
    item: Expr(
      kind: Number("1"),
      ty: Int64,
    ),
  ), Add, Span(
    start: 4,
    end: 8,
    item: Expr(
      kind: Error(ErrorNode(
        kind: TypeMismatch(
          expected: Int64,
          found: Bool,
        ),
        expr: Some(Span(
          start: 4,
          end: 8,
          item: Expr(
            kind: Bool(true),
            ty: Bool,
          ),
        )),
      )),
      ty: Int64,
    ),
  )),
  ty: Int64,
))
